Bug 353162. Firefox calls system pixman_image_init and causes hang. r=benjamin+vladimir.