gfx/cairo/libpixman/src/icrop.h
@@ -29,7 +29,7 @@ typedef struct _mergeRopBits {
     FbBits   ca1, cx1, ca2, cx2;
 } FbMergeRopRec, *FbMergeRopPtr;
 
-extern const pixman_private FbMergeRopRec FbMergeRopBits[16];
+extern pixman_private const FbMergeRopRec FbMergeRopBits[16];
 
 #define FbDeclareMergeRop() FbBits   _ca1, _cx1, _ca2, _cx2;
 #define FbDeclarePrebuiltMergeRop()	FbBits	_cca, _ccx;
@@ -98,7 +98,7 @@ extern const pixman_private FbMergeRopRec FbMergeRopBits[16];
  */
 
 /* half of table */
-extern const pixman_private pixman_bits_t fbStipple16Bits[256];
+extern pixman_private const pixman_bits_t fbStipple16Bits[256];
 #define FbStipple16Bits(b) \
     (fbStipple16Bits[(b)&0xff] | fbStipple16Bits[(b) >> 8] << FB_HALFUNIT)
 
